// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should match snapshot 1`] = `
<div>
  <p>
    Hello, World!
  </p>
  <p>
    String class
  </p>
  <p>
    Array
    class
  </p>
  <p>
    String SFC
  </p>
  <p>
    Array
    SFC
  </p>
  <p>
    <input
      type="submit"
      value="Input type = submit"
    />
  </p>
  <p>
    <input
      type="button"
      value="Input type = button"
    />
  </p>
  <p>
    <input
      onChange={[Function]}
      placeholder="Input type = text placeholder"
      type="text"
      value=""
    />
  </p>
  <p>
    <img
      alt="Alt text"
    />
  </p>
  <p>
    <a
      href="#"
      title="Link title"
    >
      Link with title
    </a>
  </p>
</div>
`;

exports[`App should match snapshot when llamified 1`] = `
<div>
  <p>
    Llama, Llama!
  </p>
  <p>
    Llama llama
  </p>
  <p>
    Llama
    llama
  </p>
  <p>
    Llama LLAMA
  </p>
  <p>
    Llama
    LLAMA
  </p>
  <p>
    <input
      type="submit"
      value="Llama llama = llama"
    />
  </p>
  <p>
    <input
      type="button"
      value="Llama llama = llama"
    />
  </p>
  <p>
    <input
      onChange={[Function]}
      placeholder="Llama llama = llama llama"
      type="text"
      value=""
    />
  </p>
  <p>
    <img
      alt="Llama llama"
    />
  </p>
  <p>
    <a
      href="#"
      title="Llama llama"
    >
      Llama llama llama
    </a>
  </p>
</div>
`;

exports[`App should match snapshot when scrambled 1`] = `
<div>
  <p>
    Hello, World!
  </p>
  <p>
    Llama llama
  </p>
  <p>
    Llama
    llama
  </p>
  <p>
    Sitrng SFC
  </p>
  <p>
    Array
    SFC
  </p>
  <p>
    <input
      type="submit"
      value="Ipunt type = sbimut"
    />
  </p>
  <p>
    <input
      type="button"
      value="Inupt type = button"
    />
  </p>
  <p>
    <input
      onChange={[Function]}
      placeholder="Ipunt type = text pcholleedar"
      type="text"
      value=""
    />
  </p>
  <p>
    <img
      alt="Alt text"
    />
  </p>
  <p>
    <a
      href="#"
      title="Lnik ttile"
    >
      Lnik with tlite
    </a>
  </p>
</div>
`;
